<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmbody1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.layouttest.ConfirmTest$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/confirmWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/confirmRow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="0.91"
            android:background="@drawable/customimagewindow"
            android:gravity="center" >
            
            			<ImageView
	                    android:id="@+id/confirmImage"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_weight="100"
	                    android:contentDescription="@string/description"
	                    android:src="@drawable/ic_launcher" />
        </TableRow>

        <TableRow
            android:id="@+id/confirmRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmImageText"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:id="@+id/confirmRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectionYes"
                android:text="@string/confirmYes" />

            <Button
                android:id="@+id/resetForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSelectionNo"
                android:text="@string/confirmNo" />

        </TableRow>
    </LinearLayout>

</FrameLayout>
